--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
   border: 5px solid black;
 }
 
+img {
+    width: 15px;
+    border-radius: 50%;
+}
+
 /*Particular styles*/
 h1 {
   font-size: 60px;
